Fixed bug: passing null value to addClass()

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             border-radius: 0;
             -webkit-appearance: none;
         }
+        #sudoku input:not([class="immutable"]):hover {
+            background-color: #DDD;
+        }
         #sudoku input.invalid {
             background-color: #FF6;
             /*background-color: #EACA70;*/
